docs.kosli.com/content/legacy_ref/v2.10.2/kosli_list_deployments.md
---
title: "kosli list deployments"
beta: false
deprecated: false
---

# kosli list deployments

## Synopsis

List deployments in a flow.
The results are paginated and ordered from latest to oldest.
By default, the page limit is 15 deployments per page.


```shell
kosli list deployments [flags]
```

## Flags
| Flag | Description |
| :--- | :--- |
|    -f, --flow string  |  The Kosli flow name.  |
|    -h, --help  |  help for deployments  |
|    -o, --output string  |  [defaulted] The format of the output. Valid formats are: [table, json]. (default "table")  |
|        --page int  |  [defaulted] The page number of a response. (default 1)  |
|    -n, --page-limit int  |  [defaulted] The number of elements per page. (default 15)  |


## Flags inherited from parent commands
| Flag | Description |
| :--- | :--- |
|    -a, --api-token string  |  The Kosli API token.  |
|    -c, --config-file string  |  [optional] The Kosli config file path. (default "kosli")  |
|        --debug  |  [optional] Print debug logs to stdout. A boolean flag https://docs.kosli.com/faq/#boolean-flags (default false)  |
|    -H, --host string  |  [defaulted] The Kosli endpoint. (default "https://app.kosli.com")  |
|        --http-proxy string  |  [optional] The HTTP proxy URL including protocol and port number. e.g. 'http://proxy-server-ip:proxy-port'  |
|    -r, --max-api-retries int  |  [defaulted] How many times should API calls be retried when the API host is not reachable. (default 3)  |
|        --org string  |  The Kosli organization.  |


## Examples Use Cases

**list the last 15 deployments for a flow**

```shell
kosli list deployments \ 
	--flow yourFlowName \
	--api-token yourAPIToken \
	--org yourOrgName

```

**list the last 30 deployments for a flow**

```shell
kosli list deployments \ 
	--flow yourFlowName \	
	--page-limit 30 \
	--api-token yourAPIToken \
	--org yourOrgName

```

**list the last 30 deployments for a flow (in JSON)**

```shell
kosli list deployments \ 
	--flow yourFlowName \
	--page-limit 30 \
	--api-token yourAPIToken \
	--org yourOrgName \
	--output json
```

